--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -47,7 +47,7 @@
 	"settings": {
 		"terminal.integrated.shell.linux": "/bin/bash",
 		"editor.tabSize": 2,
-		"locale": "zh-cn"s
+		"locale": "zh-cn"
 	},
 	"forwardPorts": [3000],
 	"postCreateCommand": "npm install",
