--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,11 +9,9 @@
 		"esbenp.prettier-vscode",
 		"formulahendry.auto-close-tag",
 		"formulahendry.auto-rename-tag",
-		"ms-azuretools.vscode-docker",
 		"visualstudioexptteam.vscodeintellicode",
 		"ritwickdey.LiveServer",
 		"alefragnani.Bookmarks",
-		"MS-CEINTL.vscode-language-pack-zh-hans", //If you don't want to use chinese, please remove this line
 		"formulahendry.code-runner",
 		"waderyan.gitblame",
 		"mhutchie.git-graph",
@@ -35,24 +33,21 @@
 	],
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
-
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
-
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "yarn install",
-
 	// Configure tool-specific properties.
 	// "customizations": {},
 	"settings": {
 		"terminal.integrated.shell.linux": "/bin/bash",
-		"editor.tabSize": 2,
-		"locale": "zh-cn"
+		"editor.tabSize": 2
 	},
-	"forwardPorts": [3000],
-	"postCreateCommand": "npm install",
-	"postStartCommand": "npm start"
-
+	"forwardPorts": [
+		3000
+	],
+	"postCreateCommand": "npm install jsdom	"
+	// "postStartCommand": "npm start"
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
 }
