--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -45,8 +45,8 @@
 	},
 	"forwardPorts": [
 		3000
-	],
-	"postCreateCommand": "npm install jsdom	"
+	]
+	//"postCreateCommand": "npm install jsdom	"
 	// "postStartCommand": "npm start"
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
